@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+30-Dec-2002
+~~~~~~~~~~~
+Preserve selection when changing view type.
+Shade selection when we don't have primary.
+
 29-Dec-2002
 ~~~~~~~~~~~
 Show thumbnails in List view. Allow changing the icon size. If the size is
